--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -70,7 +70,7 @@
             <p class="testimonial-quote">{{testimony.quote}}</p>
             <p class="testimonial-name">- {{testimony.name}}</p>
             <div class="testimonial-icon"
-                style="background-image: url('https://j-watt.github.io/souls-d20/assets/images/artwork/races/soulsd20-race-symbols-{{testimony.icon}}.png');">
+                style="background-image: url('/assets/images/artwork/races/soulsd20-race-symbols-{{testimony.icon}}.png');">
             </div>
             <span></span>
         </div>
