--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -4,7 +4,7 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 800px;
-    background-image: url("https://j-watt.github.io/souls-d20/assets/images/logos/SoulsD20 Title Color.png");
+    background-image: url("/assets/images/logos/SoulsD20 Title Color.png");
     margin: 0;
 }
 
