--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,11 +3,17 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0 60px;
     height: 100px;
     border-top: 1px solid #b99449;
     background: whitesmoke;
     color: rgba(0, 0, 0, 0.87);
+}
+
+
+@media only screen and (min-width: 768px) {
+    .footer {
+        padding: 0 60px;
+    }
 }
 
 .footer a {
@@ -33,4 +39,5 @@
 .social a {
     text-align: center;
     font-size: 1.5rem;
+    padding: 9px;
 }
