--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,6 +11,24 @@
     margin: 0 20%;
 }
 
+#mobileMenu {
+    height: 36px;
+    width: 64px;
+    margin: 14px;
+}
+
+@media only screen and (max-width: 600px) {
+    #mainHeader nav {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #mobileMenu {
+        display: none;
+    }
+}
+
 header,
 header nav {
     height: inherit;
@@ -37,7 +55,7 @@ nav a {
     background-image: linear-gradient(45deg, #cb8c34, #cb8c34, #cf7030);
 }
 
-#mainLogo {
+.main-logo {
     height: 90px;
     background-image: radial-gradient(black 40%, transparent 50%);
     margin-top: 25px;
