--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -45,9 +45,9 @@
 
     <div class="about-us">
         <div>
-            <div class="img-wrapper">
+            <span class="img-wrapper">
                 <img src="assets/images/humans/humans-0.jpg">
-            </div>
+            </span>
             <p>Souls D20 started as a fun and chaotic side project between a small group of friends. After playing and
                 having fun with it for more than a year we decided to expand the book and add new players. Five years
                 later the book has gone through countless patches and multiple massive updates. Now we have the game
@@ -59,9 +59,9 @@
                 always excited to include new players to the Souls D20 experience so come and ask questions if you are
                 looking to learn more! We will happily guide you in how to build characters, learn the rules and get
                 playing. </p>
-            <div class="img-wrapper">
+            <span class="img-wrapper">
                 <img src="assets/images/humans/humans-1.jpg">
-            </div>
+            </span>
         </div>
 
     </div>
