Add patreon link

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -36,6 +36,11 @@
     margin: 0 20px;
 }
 
+.social {
+    max-height: 100px;
+    min-width: 100px;
+}
+
 .social a {
     text-align: center;
     font-size: 1.5rem;
