--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         <p>Site by <a href="mailto:WattJordanAlex@gmail.com">Jordan Watt</a></p>
     </span>
     <div style="display: flex; align-items: center;">
-        <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <form style="margin-right: 10px;" action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="business" value="5FGGMENPSR3LU" />
             <input type="hidden" name="no_recurring" value="0" />
             <input type="hidden" name="item_name"
@@ -18,6 +18,9 @@
         <div class="social">
             <div id="paypal-donate-button-container">
             </div>
+            <a mat-icon-button color="primary" target="_blank" [href]="'https://www.patreon.com/SoulsD20'"><i
+                    class="fa-brands fa-patreon"></i>
+            </a>
             <a mat-icon-button color="primary" target="_blank" href="https://discord.gg/UnEKqTx">
                 <i class="fa-brands fa-discord"></i>
             </a>
