--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -48,7 +48,7 @@
     </mat-tab-group>
 
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <h2>Start your adventure now, and play in a living world five years in the making.</h2>
+        <h2>Start your adventure now, and play in a living world six years in the making.</h2>
         <p style="max-width: 500px;">Play in a team, alongside multiple other teams of players and game masters, where
             your actions change
             the world and their experiences.</p>
