--- a/src/app/support/support.component.css
+++ b/src/app/support/support.component.css
@@ -4,11 +4,48 @@
     text-align: center;
 }
 
-.paypal {
+.paypal,
+.patreon {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+    margin-bottom: 60px;
+}
+
+.patreon h2 {
+    font-size: 1.5em;
+    margin: 0;
+}
+
+.patreon a {
+    border: 1.5px solid var(--black);
+    border-radius: 3px;
+    display: inline-block;
+    padding: 10px;
+    margin: 80px 20px 20px;
+    transition: border 0.5s;
+}
+
+.patreon a:hover {
+    border: 1.5px solid #FF424D;
+}
+
+#patreon-wordmark {
+    background: url("/assets/images/logos/Digital-Patreon-Wordmark_FieryCoral.png") no-repeat;
+    background-size: contain;
+    transition: background 0.5s;
+    width: 300px;
+    height: 65px;
+}
+
+
+#patreon-wordmark:hover {
+    background: url("/assets/images/logos/Digital-Patreon-Wordmark_White.png") no-repeat;
+    background-size: contain;
+}
+
+.paypal {
     border-bottom: 1.5px solid #b99449;
     margin-bottom: 160px;
 }
@@ -17,7 +54,8 @@
     max-width: 500px;
 }
 
-.paypal img {
+.paypal img,
+.patreon img {
     width: 300px;
     height: fit-content;
 }
@@ -142,6 +180,7 @@
     .img-wrapper {
         margin: 0 auto 60px auto;
     }
+
     .about-us p {
         margin: 20px auto;
         text-align: center;
