--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,16 +1,30 @@
 <div class="title">
     <h1>Support Souls D20</h1>
-    <p>Look forward to more content like book materials, a monster manual, character sheets,
-        a patreon with exclusive rewards and more.</p>
+    <p>Look forward to more content like book materials, a monster manual, GM resources, character sheets and more.</p>
 </div>
 <div class="content">
+    <div class="patreon">
+        <span class="donations">
+            <h3>Support</h3>
+            <p>Become a supporter and gain an exclusive
+                role in our discord community that gives you early access to art, book content, priority placements in
+                any campaigns we are running and behind the scenes updates related to Souls D20.</p>
+        </span>
+        <div>
+            <a target="_blank" [href]="'https://www.patreon.com/SoulsD20'">
+                <h2>Become a</h2>
+                <div id="patreon-wordmark"></div>
+            </a>
+        </div>
+
+    </div>
     <div class="paypal">
         <span class="donations">
             <h3>Donations</h3>
             <p>Donations will help fund more great art and any further design for the book!</p>
         </span>
 
-        <div>
+        <div style="margin: 20px;">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/1200px-PayPal.svg.png">
             <div id="paypal-donate-button-container">
                 <form action="https://www.paypal.com/donate" method="post" target="_top">
@@ -49,7 +63,7 @@
                 <img src="assets/images/humans/humans-0.jpg">
             </span>
             <p>Souls D20 started as a fun and chaotic side project between a small group of friends. After playing and
-                having fun with it for more than a year we decided to expand the book and add new players. Five years
+                having fun with it for more than a year we decided to expand the book and add new players. Six years
                 later the book has gone through countless patches and multiple massive updates. Now we have the game
                 being played and tested by more than ten testers which have played thousands of hours of campaigns.</p>
         </div>
